# pyspike

./: .gitignore  .gitmodules  MANIFEST.in  README.md  pyproject.toml  requirements.txt  riscv.pth  setup.cfg  setup.py
.github/workflows/: develop.yml  workflow.yml
docs/: backlog.md  playbook.md  talks.md
examples/amba/: uart_lite.py  uart_lite_impl.py
examples/instructions/: __init__.py  myisas.py
examples/xhuimt/: __init__.py  arg.py  mycsrs.py  mylrsc.py  operands.py
examples/xthead/: __init__.py  arg.py  operands.py  theadba.py
scripts/: lcov-report  pyspike  spike
src/main/cpp/: fesvr_term.cc  fesvr_term.h  py_bridge.cc  py_bridge.h  py_module.cc  riscv_cfg.cc  riscv_cfg.h  riscv_csrs.cc  riscv_csrs.h  riscv_decode.cc  riscv_decode.h  riscv_devices.cc  riscv_devices.h  riscv_disasm.cc  riscv_disasm.h  riscv_extension.cc  riscv_extension.h  riscv_processor.cc  riscv_processor.h  riscv_sim.cc  riscv_sim.h
src/main/python/riscv/: __main__.py  _utils.py
src/test/asm/: _exit.S  huimt_lr_sc.S  huimt_msctlr.S  linker.ld  theadcmo.S
tests/: __init__.py  conftest.py  test_cfg.py  test_csrs.py  test_decode.py  test_devices.py  test_disasm.py  test_extension.py  test_isa_parser.py  test_package.py  test_peripherals.py  test_processor.py  test_pyspike.py  test_sim.py
tests/data/: huimt_lr_sc.elf  huimt_msctlr.elf  libc-printf_hello.elf  plic-uart_echo.elf
tests/data/huimt/: __init__.py  mycsrs.py  myisas.py  operands.py
tests/data/instructions/: __init__.py  fmt.py  myisas.py  operands.py  thead_ba.py  thead_cmo.py  thead_xstatus.py
tests/data/peripherals/: __init__.py  uart_lite.py  uart_lite_impl.py
